--- a/index.html
+++ b/index.html
@@ -36,7 +36,31 @@
       </ul>
     </section>
     <section>
+      <div id="token-section">
+      <div class="col">
+      <div class="mb-3">
+        <label for="clientId">Client ID</label>
+        <input type="text" id="clientId">
+        </div>
+      <div class="mb-3">
+        <label for="clientSecret">Client Secret</label>
+        <input type="text" id="clientSecret">
+      </div>
+      <input class="btn btn-submit" type="button" onclick="requestAuthorization()"
+       value="request Authorization"> 
+      </div>
+    </section> 
+
+
+
+
+    <!-- <section>
       <button>Save in Spotify</button>
     </section>
+ -->
+
+
+
+
   </body>
 </html>
