--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
     <section>
       <label for="search">Rechercher</label>
-      <input type="text" id="search" />
-      <button>Rechercher</button>
+      <input type="text" id="searchInput" />
+      <button id="searchBtn">Rechercher</button>
+      <button id="songInfo">Informations de la chanson</button>
     </section>
     <section>
       <h2>Résultats</h2>
